--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^4.7.1",
+    "@supabase/supabase-js": "^2.56.0",
     "next": "^15.4.6",
+    "openai": "^5.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
